<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fenix.assisteam1_0.Registro"
    android:orientation="vertical"
    android:weightSum="1" >


    <EditText
        android:id="@+id/idRegistroEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_editText2"
        android:layout_above="@+id/idRegistroButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp" />


    <Button
        android:id="@+id/idRegistroButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_button"
        android:layout_weight="0.13"
        style="@style/Widget.AppCompat.Button"
        android:layout_marginBottom="94dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/idRegistroTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical|center"
        android:text="@string/name_textView"

        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:editable="false"
        android:textAllCaps="false"
        android:textSize="?attr/listPreferredItemHeight"
        android:textColor="@color/colorPrimaryDark"
        android:layout_weight="52"
        android:maxLines="1"
        tools:ignore="Deprecated"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/idRegistroTextView1"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/name_dni"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_below="@+id/idRegistroTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/idRegistroEditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idRegistroTextView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/idRegistroTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_textView3"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>