<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fenix.assisteam1_0.Inicio"
    android:weightSum="1">

    <TextView
        android:id="@+id/idInicioTextView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_inicio"
        android:textSize="50sp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/idInicioTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_dni"
        android:textSize="30sp"
        android:layout_marginTop="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/idInicioEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/idInicioTextView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textIsSelectable="false"
        android:layout_weight="0.09" />

    <TextView
        android:id="@+id/idInicioTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_textView3"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/idInicioEditText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/idInicioEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_textView3"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/idInicioTextView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/idInicioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_entrar"
        android:layout_weight="0.22" />

</LinearLayout>
